# bitwise

./: .gitignore  CMakeLists.txt  LICENSE  README.md  verify_manual.py
.github/workflows/: ci.yml
docs/: index.md
docs/01_introduction/: installation.md  vision.md
docs/02_basic_syntax/: data_types.md  variables.md
docs/03_control_flow/: if_else.md  loops.md  match_pattern.md
docs/04_memory_management/: linear_types.md  ownership_model.md  regions_and_scopes.md
docs/05_functions_and_modules/: functions.md  modules.md
docs/06_hardware_and_bits/: bit_manipulation.md  mmio_registers.md
docs/07_concurrency/: async_await.md  interrupt_handlers.md
docs/08_roadmap/: milestones.md
include/bitwise/: arm_backend.hpp  ast.hpp  bir.hpp  bir_gen.hpp  codegen.hpp  diagnostic.hpp  file_utils.hpp  lexer.hpp  parser.hpp  sema.hpp  token.hpp  version.hpp.in
src/: main.cpp
src/backend/: arm_backend.cpp  codegen.cpp
src/bir/: bir_gen.cpp
src/frontend/: lexer.cpp  parser.cpp  sema.cpp
tests/: CMakeLists.txt  test_runner.py
tests/demos/: oled_driver.bw  oled_visualizer.html  snake_native.bw
tests/validation/: error_test.bw  safety_test.bw  stress_test.bw  test_all_arm.bw
tools/: emu.py
